--- a/_posts/2020-11-1-Java基础.md
+++ b/_posts/2020-11-1-Java基础.md
@@ -560,9 +560,13 @@ String s3 = new String(“happened”);//String对象创建
 //当对象的引用变量指向对象时，两者就联系起来，改变引用的属性就会改变对象的属性
 ```
 
+##### Java的三大特性
+
+**封装、继承、多态**
+
 ##### 多态
 
-在面向对象语言中，接口的不同实现方式即为多态，就是说多个对象调用同一个方法，得到不同的结果。即一个引用变量到底会指向哪个类的实例对象，该引用变量发出的方法调用到底是哪个类中实现的方法，必须在程序运行期间才能决定。
+在面向对象语言中，接口的不同实现方式即为多态，就是说多个对象调用同一个方法，得到不同的结果。**即一个引用变量到底会指向哪个类的实例对象，该引用变量发出的方法调用到底是哪个类中实现的方法，必须在程序运行期间才能决定。**
 
 语法：父类类名 = new 子类类名()；
 
@@ -576,20 +580,50 @@ String s3 = new String(“happened”);//String对象创建
 
 实现方式：
 
-接口，普通子类重写父类的方法
+**接口**，普通子类**重写**（返回值类型、方法名、参数列表必须相同）父类的方法，**重载**（发生在同一个类中，方法名必须相同，参数类型不同、个数不同、顺序不同，方法返回值和访问修饰符可以不同，重载就是同一个类中多个同名方法根据不同的传参来执行不同的逻辑处理）
+
+面向对象的五大基本原则：
+
+- **单一职责**
+
+​     类的功能要单一
+
+- **开放封闭原则**
+
+​      一个模块对于拓展是开放的，对于修改是封闭的
+
+- **里氏替换原则**
+
+​      子类可以出现在父类能够出现的任何地方
+
+- **依赖倒置原则**
+
+​       不要依赖具体要依赖抽象，抽象不应该依赖于具体实现，具体实现应该依赖于抽象
+
+- **接口分离原则**
+
+​        设计时采用多个与特定客户类有关的接口比采用一个通用的接口要好。
+
+详细：
+
+**为什么子类必须继承父类**，按照面向对象的五大基本原则中的**依赖倒置原则**：抽象不依赖于具体，具体依赖于抽象，既然要实现多态，必定有一个作为抽象类来定义“行为”，以及若干个作为“具体”类来呈现不同的行为形式或形态。
+
+**为什么必须重写父类的方法**，重新定义父类方法，使父类和子类对同一行为的表现形式各不相同。
+
+**为什么父类引用要指向子类对象**，面向对象的五大基本原则里面的**里氏替换原则**，简单来说就是父类可以引用子类，但是不能反过来。因为父类对于子类来说属于抽象的层面，抽象可以提供接口给具体实现。
 
 ###### 封装
 
-将数据和行为组合在一个包中，并对对象的使用者隐藏具体的实现细节，实现封装的关键在于，绝对不能让类中的方法直接访问其它类的实例字段，程序只能通过对象的方法与对象数据进行交互。
+将**数据和行为组合在一个包中**，并对对象的使用者隐藏具体的实现细节，实现封装的关键在于，绝对不能让类中的方法直接访问其它类的实例字段，程序只能通过对象的方法与对象数据进行交互。
 
-- 减少耦合
-- 隐藏实现细节
+- **减少耦合**
+- **隐藏实现细节**
 
 ###### 继承
 
-如果子类继承了父类，那么子类就可以复用父类的属性与方法，并且可以在这个基础上新增方法和属性，java中只能继承一个父类
+如果子类继承了父类，那么子类就可以复用父类的属性与方法，并且可以在这个基础上新增方法和属性，java中只能继承一个父类（**单继承**）
 
-- 提高代码复用性
+- **提高代码复用性**
 
 
 
