--- a/_posts/2020-11-2-Spring.md
+++ b/_posts/2020-11-2-Spring.md
@@ -36,7 +36,7 @@ tags:
 
 ## 配置元元素
 
-​    如上图所示，Spring IoC容器使用一种形式的配置元数据。此配置元数据表示您作为应用程序开发人员如何告诉Spring容器实例化，配置和组装应用程序中的对象。
+​    如上图所示，Spring IoC容器使用一种形式的配置元数据。此配置元数据表示您作为应用程序开发人员告诉Spring容器如何实例化，配置和组装应用程序中的对象。
 
 ## 实例化容器
 
@@ -348,7 +348,7 @@ DI：
 - @SpringBootApplication-启用 Spring Boot 自动配置和组件扫描。
 - @Bean-表示方法产生一个由 Spring 管理的 bean。
 
-###### Spring事务
+###### Spring事务原理
 
 - 事务
 
@@ -397,5 +397,5 @@ NESTED(6);
 1. 在外部方法未开启事务的情况下`Propagation.NESTED`和`Propagation.REQUIRED`作用相同，修饰的内部方法都会新开启自己的事务，且开启的事务相互独立，互不干扰。
 2. 如果外部方法开启事务的话，`Propagation.NESTED`修饰的内部方法属于外部事务的子事务，外部主事务回滚的话，子事务也会回滚，而内部子事务可以单独回滚而不影响外部主事务和其他子事务。
 
-
+###### Spring注解实现
 
