--- a/_posts/2020-11-2-数据结构与算法.md
+++ b/_posts/2020-11-2-数据结构与算法.md
@@ -913,3 +913,39 @@ public class Digraph {
 }
 ```
 
+###### 13 动态滑窗
+
+最小覆盖字串 leetcode 76
+
+```java
+class Solution {
+  public static String minWindow(String s, String t)
+    {
+        int[] hash=new int[128];
+        for (char ch:t.toCharArray())
+        {
+            hash[ch]--;//初始化，里面放的是t的字符，先置为负数
+        }
+        String res=""; int cnt=0;
+        int len=s.length()+1;
+        char ch;
+        for (int i=0,j=0;i<s.length();i++)//i是右边，j是左边
+        {
+            ch=s.charAt(i);
+            hash[ch]++;
+            if (hash[ch]<=0) cnt++;//统计有效命中个数
+
+            while (j<i && hash[s.charAt(j)]>0) hash[s.charAt(j++)]--;//左端元素大于0了，说明右边有更好的选择，因此左移同时hash数组对应的元素减1
+            if (cnt==t.length()&&len>i-j+1)//达到要求且窗口较当前的窗口小
+            {
+                len=i-j+1;//改变窗口大小
+                res=s.substring(j,i+1);//更新res
+            }
+        }
+        return res;
+    }
+}
+```
+
+
+
