--- a/_posts/2020-11-2-设计模式.md
+++ b/_posts/2020-11-2-设计模式.md
@@ -45,12 +45,15 @@ tags:
 package designPatterns;
 
 public class Singleton {
+    
     private static Singleton uniqueInstance = new Singleton();//饿汉式，在初始化时就创建好对象，需要时直接拿来用
 
     private Singleton() {}//把构造器声明为私有，只有在Singleton类内才能调用构造器
 
     public static Singleton getInstance(){//返回实例
+        
         return uniqueInstance;
+        
     }
 }
 ```
@@ -61,6 +64,7 @@ public class Singleton {
 package designPatterns;
 
 public class Singleton {
+    
     private static Singleton uniqueInstance;//懒汉式，需要时才创建实例
     //其他实例变量
     private Singleton() {}//把构造器声明为私有，只有在Singleton类内才能调用构造器
@@ -98,7 +102,7 @@ public class Singleton {
  }
 ```
 
-Volatile关键词确保：
+**Volatile**关键词确保：
 
 在创建单例对象时，并非是一个原子操作，在JVM中大概做了下面3件事：
 
