--- a/_posts/2020-11-2-kafka.md
+++ b/_posts/2020-11-2-kafka.md
@@ -82,7 +82,11 @@ Replicas的一致性问题：每个Partition有多个副本，其中有且仅有
 
 ![image-20211027153555807](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20211027153603.png)
 
+##### ElasticSearch
 
+###### 倒排索引
+
+传统的我们的检索是通过文章，逐个遍历找到对应关键词的位置，而倒排索引，是通过分词策略，形成了词和文章的映射关系表，这种词典+映射表即为倒排索引，有了倒排索引，就能实现O(1)时间复杂度的效率检索文章，极大提高了检索效率
 
 
 
