--- a/_posts/2021-6-18-计网.md
+++ b/_posts/2021-6-18-计网.md
@@ -17,7 +17,7 @@ tags:
 
 应用层、运输层、网络层、网路接口层
 
-![image.png](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210925202652.webp)
+![image.png](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20211119171956.webp)
 
 | OSI七层网络模型 | TCP/IP四层概念模型 | 对应网络协议 |
 | :-------------: | :----------------: | :----------: |
@@ -29,13 +29,13 @@ tags:
 |   数据链路层    |     数据链路层     |     ATM      |
 |     物理层      |                    |              |
 
-- 应用层：各种应用程序协议
-- 表示层：信息的语法语义以及它们的关联，如加密、转换翻译、压缩解压缩
-- 会话层：不同机器上的用户之间建立以及管理会话
-- 传输层：接受上一层的数据，在必要的时候把数据交给网络层，且保证这些数据段有效到达对端
-- 网络层：控制子网的运行，如逻辑地址、分组传输、路由选择
-- 数据链路层：物理寻址，同时将原始比特流转变为逻辑传输路线
-- 物理层：机械、电子、定时接口通信道上的原始比特流传输
+- 应用层：各种**应用程序协议**
+- 表示层：信息的**语法语义以及它们的关联**，如**加密、转换翻译、压缩解压缩**
+- 会话层：**不同机器上的用户之间建立以及管理会话**
+- 传输层：**接受上一层的数据**，在必要的时候把数据交给网络层，且保证这些数据段有效到达对端
+- 网络层：控制子网的运行，如**逻辑地址、分组传输、路由选择**
+- 数据链路层：**物理寻址**，同时将**原始比特流转变为逻辑传输路线**
+- 物理层：机械、电子、定时接口通信道上的**原始比特流传输**
 
 ![img](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210922194104.gif)
 
@@ -49,21 +49,21 @@ tags:
 
 运输层在应用程序端点之间传送应用层报文，有两种运输层协议：TCP\UDP。
 
-- 网络层
+- **网络层**
 
-负责将数据报的网络层分组从一台主机移动到另一个主机，具体功能包括寻址和路由选择使两终端系统能够互联并决定最佳路径、连接的建立、保持、终止等，它使运输层不需要了解网络中的数据传输与交换技术。IP协议就是在该层。
+负责将数据报的网络层分组从一台主机移动到另一个主机，**具体功能包括寻址和路由选择使两终端系统能够互联并决定最佳路径、连接的建立、保持、终止等，它使运输层不需要了解网络中的数据传输与交换技术**。IP协议就是在该层。
 
-寻址：对网络层而言用IP地址来唯一标识互联网上的设备，网络层依靠IP地址进行相互通信。
+寻址：**对网络层而言用IP地址来唯一标识互联网上的设备，网络层依靠IP地址进行相互通信**。
 
-路由：在同一个网络中的内部通信并不需要网络层设备，仅仅靠数据链路层就可以完成相互通信，对于不同的网络之间的相互通信则必须借助路由器等三层设备。
+路由：在同一个网络中的内部通信并不需要网络层设备，仅仅靠数据链路层就可以完成相互通信，对于**不同的网络之间的相互通信则必须借助路由器等三层设备**。
 
 - 链路层
 
-将分组从一个节点（主机或路由器）移动到路径的下一个节点，网络层将数据报下传给链路层，链路层沿路径将数据报传给下一个节点并把数据报上传给网络层。网络层将受到来自每个不同链路层协议的不同服务，链路层分组称为帧。
+将分组从一个节点（主机或路由器）移动到路径的下一个节点，网络层将数据报下传给链路层，链路层沿路径将数据报传给下一个节点并把数据报上传给网络层。网络层将受到来自每个不同链路层协议的不同服务，**链路层分组称为帧**。
 
 - 物理层
 
-链路层的任务是将整个帧从一个网络元素移动到邻近的网络元素，而物理层的任务是将该帧中的比特从一个节点移动到下一个节点，这层的协议仍然是链路相关的，并且进一步与该链路的实际传输媒介相关。
+链路层的任务是将整个帧从一个网络元素移动到邻近的网络元素，而**物理层的任务是将该帧中的比特从一个节点移动到下一个节点**，这层的协议仍然是链路相关的，并且进一步与该链路的实际传输媒介相关。
 
 ##### tcp的三次握手和四次挥手，以及为什么。
 
@@ -299,8 +299,8 @@ GET与POST的区别：
 
 - 使用GET方法时实体体为空，使用POST方法时才使用该实体体。
 
-- 当用户提交表单时，HTTP客户常用POST方法，使用POST报文时，用户仍可以向服务器请求一个Web页面，但Web页面的特定内容依赖于用户在表单字段中输入的内容，当方法字段的值为POST时，则实体类中包含的就是用户在表单字段中的输入值。
-- GET方法在所请求的URL中包含输入的数据。
+- 当用户提交表单时，HTTP客户常用POST方法，使用POST报文时，用户仍可以向服务器请求一个Web页面，但Web页面的特定内容依赖于用户在表单字段中输入的内容，**当方法字段的值为POST时，则实体类中包含的就是用户在表单字段中的输入值。**
+- **GET方法在所请求的URL中包含输入的数据。**
 
 
 
